--- a/documents/report/doc/background.tex
+++ b/documents/report/doc/background.tex
@@ -1,1 +1,2 @@
 \chapter{Background and Analysis}
+Wake-up lights have been around for a while already, Phillips http://www.philips.se/ is one of the market leaders when it comes to wake-up lights. Their wake-up lights usually consist out of a one color lamp with a simple 7-segment display to display the time. Other higher priced variants of their assortment contain smart-phone connectivity. Most other smaller companies follow a same recipe. One of the exceptions are the so called smart light bulbs. Such as the"MagicLight Pro" https://www.magiclightbulbs.com/ and http://theuplight.com/ which, other than a normal RGB lightbulb, can also be used for waking you up. The problem with Phillips wake-up lights is that they are in the higher price range, where the cheaper lights don't contain a screen. Furthermore, none of the options have a screen that is capable of displaying more than just the time, which could be a great selling point with the use of social media nowadays. One could see onces activity right after waking up.
