Started with evaluation part.

--- a/documents/report/doc/design.tex
+++ b/documents/report/doc/design.tex
@@ -48,11 +48,12 @@ to the RGB color model.
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \begin{table}[H]
 	\centering 
-	\begin{tabular}{L{0.2\textwidth} L{0.2\textwidth} L{0.1\textwidth} 
-		L{0.4\textwidth} } 
+	\begin{tabular}{p{0.2\textwidth} p{0.2\textwidth} p{0.1\textwidth} 
+		p{0.4\textwidth} } 
 		\textbf{Block}           &
 		\textbf{Component(s)}      &
-		\textbf{Cost} & \textbf{Justification of the
+		\textbf{Costs} 
+		& \textbf{Justification of the
 		Choice}
 		\\\hline
 		Terminal Connection      & SILICON LABS CP2102        & 24 SEK
