--- a/documents/report/doc/design.tex
+++ b/documents/report/doc/design.tex
@@ -78,12 +78,17 @@ to the RGB color model.
 		device and is therefore cheaper and more performant. Necessary
 		feedback circuitry is also hard to find as COTS.
 		\\
-		Screen and Driver        & Custom Opamp Amplifier     & 30 SEK
-		& One channel of the LM324 (four channel operational amplifier)
-		was unused a simple circuit made it a cheap and easy-to-use DAC
-		screen driver.    \\ 
+		Screen and Driver        & SEPS525F and Custom Opamp Amplifier &
+		150 SEK and 30 SEK & The OLED displays 18-bit colors with a
+		resolution of 160x128 pixels. Moreover the pciture is clearly
+		visible from almost every angle. One channel of the LM324 (four
+		channel operational amplifier) was unused a simple circuit made
+		it a cheap and easy-to-use DAC screen driver.    \\ 
+		Microcontroller & ATxmega128A4U & 60 SEK & High-end 8-bit
+		microcontroller with a lot of usefull perpherie such as a
+		powerfull 12-bit, 2mbps ADC. Available in QFN package.	\\
 		\hline
 	\end{tabular}
-	%\caption{My caption}
+	\caption{Design choices: Why has which component been chosen?}
 	\label{tab:design_choices}
 \end{table}
