Finished HW description.

--- a/documents/report/doc/conclusion.tex
+++ b/documents/report/doc/conclusion.tex
@@ -1,6 +1,12 @@
 \chapter{Conclusion and Future Work}
 \label{chap:conclusion}
-Swakeup has still the status of a prototype and room for improvement. There are
+\begin{figure}[H] 
+	\centering 
+	\label{fig:demo}
+	\includegraphics[width=0.6\textwidth]{./fig/demo.jpg}
+	\caption{Picture of integrated system with ISP programmer.} 
+\end{figure} Swakeup has still the
+status of a prototype and room for improvement. There are
 still a lot of things, which have to be done. The basic functionality is given
 though. The most difficult part about this work is the simultaneous
 development of hardware and software by the same person. On the one hand one
