--- a/documents/report/doc/implementation.tex
+++ b/documents/report/doc/implementation.tex
@@ -1,8 +1,107 @@
 \chapter{Implementation}
 \label{chap:implementation}
 
+\begin{figure}[H]
+	\centering
+	\label{fig:block}
+	\includegraphics[width=0.7\textwidth]{../block/block.png}
+	\caption{More technical blockdiagram of the Swakeup.}
+\end{figure}
+
+After the design choices had been made the blocks chosen had to be assembled. In fig. \ref{fig:block} the actual system architecture from a more technical
+point of view is displayed. One can clearly see, that the system is divided into two physical boards. The logic board consists of the microcontroller, a serial
+connection infrastructure, an OLED screen, an \textit{IEEE 802.11} module, a ISP
+programming infrastructure and some LEDs/a button (UI).
+\newpar  
+The power board takes the 20 V input of a low-cost power supply and breaks it
+down to 2.8 V (Vcc), 5 V for phone charging and the power which is needed for
+the RGB LED.
+\newpar
+The partitioning of the system functionalities on two boards has a bunch of
+advatages: Two people worked on this project, so each could develop a PCB; It is
+quite common to seperate signals from power lines out of EMI reasons; There was
+simply not enough space on one two-layer board for the whole system keeping a
+base area of 5 cm x 4 cm, which was a design requirement. 
+\newpar
+The two boards are connected together through four headers. By these headers an
+electrical and mechanical connection is maintained. The headers allow a feedback
+from the LED driver on the power board to the logic board (ADC). Also the
+control variable (PWM) comes via the headers from the µC to the LED driver. The
+2.8 V Vcc is produced and regulated on the power board and is also availabe at
+one header. Another voltage available from one header is the OLED driver
+voltage. 
+
 \section{Hardware}
 \label{sec:hardware}
+This section describes the two PCBs. Schematics can be found under appendix
+\ref{append:power} resp. appendix \ref{append:logic}.
+
+\subsection{Power Board}
+\label{subsec:power}
+It is the LM2840 which in combination with a simple voltage divider ensures the
+2.8 V for Vcc. All step-down converters use the same inductor with a value of 33
+µH. It is a low-cost, quite small, shielded inductor which is ment to be used
+for switching power supplies. Moreover all step-down converters are enhanced
+with a SMD schottky diode and of course at least one SMD capacitor for
+smoothing the output signal. As it is good practice to do so all ICs are making
+use of decoupling capacitors.  
+\newpar
+For charging ones phone the TS30012, another step-down converter IC, is used.
+The feedback voltage divider of this IC is already integrated and does not need
+to be provided externally as the IC provides fixed 5 V output. The output is
+connected to a USB connector type A. This IC can deliver up to 2 A. An
+interesting feature of the phone charging circuitry on the power board is the
+"Dedicated Charging Port" (DCP) functionality. The TPS2514 is a small,
+easy-to-use, 6-pin component, which complies to the USB standard and a majority
+of the minefield of propriatary standards to signal a DCP. Now one might ask:
+What does this mean? Well this means, that if you connect your IPhone, it will
+know, that it can draw more than 100 mA, which is the minimum current provided
+by a normal USB 2.0 port. Otherwise the current drawn by the phone will be
+limited. The charging functionality can be turned on and off via a GPIO pin. The
+TS30012 comes in a QFN16 package (pad pitch of 0.5 mm) to save space.
+\newpar
+For testing purposes a lot of test points have been included into the design.
+Futhermore there are LEDs for different voltages (e.g. Vcc).
+\newpar
+The LED driver consists of an actual power electronics part and a feedback part.
+The main idea is, that the current driven through the three color channels of
+the RGB LED (see fig. \ref{fig:led}) can be controlled by software (PID
+controller). In the power electronics part there are three analog circuits. Each
+circuit mainly consists of a p-channel MOSFET, which is switched by a NPN
+bipolar transistor. This bipolar transistor gets its intput signal from the
+µProcessor (PWM). By pulling the 20 V to GND the PMOS "sees" a negative
+gate-to-source voltage and opens. The additional bipolar transistor ensures,
+that the gate-source capacity is charged fastly as soon as the PWM NPN blocks.
+In this case the base is pulled up via \SI{10}{\kilo\ohm} to 20 V and as long as
+the collector (which has the same potential as the gate of the PMOS) does not
+also have 20 V the NPN keeps pumping charges into the gate-source capacity. The
+simple silicon diode ensures that the gate-charging NPN has no effect as soon as
+the PWM NPN opens. The rest of the circuit is again a standard step-down
+converter. At the output of every single color channel power circuit one can see
+a shunt resistor of \SI{0.1}{\ohm}. This shunt resistor is combined with a
+simple low-pass filter. The feedback signal is amplified by a differential
+amplifier which comes after the filter. The signal is supposed to be between 0 V
+and 1 V (if the internal reference voltage is used). By doing so one can use all
+bits of the ADC and therefore supress quantization noise. 
+\newpar
+So as there are three color channels (red, green and blue) one needs three
+operational amplifiers. Hence the LM324QT, which provides four operational
+amplifiers, has been chosen. Of course the decision has been made to take QFN16
+packaging once more to save even more space. An additional operational amplifier
+was now ready to be used as a digital-analog converter to drive the OLED screen.
+For this reason a low-pass filter is attached to the input of the fourth opamp.
+Apart from that the opamp is configured just like a standard non-inverting
+amplifier. By software the OLED screen brightness is steerable. The feedback
+from the OLED is generated with a voltage divider. 
+\newpar
+Figure \ref{fig:led} shows the kind of LEDs, which can be driven by this LED
+driver.
+\begin{figure}
+	\centering
+	\includegraphics[width=0.3\textwidth]{./fig/led.jpg}
+	\caption{10 W RGB LED}
+	\label{fig:led}
+\end{figure} 
 
 \section{Software Interfaces}
 As can be seen from the hardware, there are two systems that have to communicate with each other. Not only that, but its also needed to talk with a server back-end. The choice has been made to use Protobuf in order to save time. Protobuf, short for Protocol buffers, are a language-neutral, platform-neutral extensible mechanism for serializing structured data developed and maintained by google https://developers.google.com/protocol-buffers/. This translates message structures in language dependent types. In C the messages are translated into structs, where the messages are translated into Objects in Java.
